--- a/weapp/market_tools/tools/lottery/templates/lottery/webapp/roulette.html
+++ b/weapp/market_tools/tools/lottery/templates/lottery/webapp/roulette.html
@@ -80,8 +80,8 @@ $(document).bind("mobileinit", function () {
                 {% if lottery.prizes %}
                 {% for prize in lottery.prizes %}
                 <p>
-                    <!-- {{prize.name}}：
-                    {% if prize.prize_type == 1 %}
+                    {{prize.name}}：
+                   <!--  {% if prize.prize_type == 1 %}
                     优惠劵
                     {% endif %}
                     {% if prize.prize_type == 2 %}
