--- a/weapp/static_v2/js/view/mall_promotion_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_promotion_filter_view/template.html
@@ -83,6 +83,12 @@
 	</div>
 	<div class="xui-col disTc">
 		<div class="xui-i-item">
+			<label>优惠码：</label>
+			<input type="text" class="form-control" id="coupon_id" name="coupon_id" value="" />
+		</div>
+	</div>
+	<div class="xui-col disTc">
+		<div class="xui-i-item">
 			<label>优惠券类型：</label>
 			<select class="" id="coupon_promotion_type" name="promotion_type">
 				<option value="-1">全部</option>
