--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -79,7 +79,7 @@
                         {% if not product.id %}<span class="xui-giftTag">赠品</span>{% endif %}
                         <img src="{{product.thumbnails_url}}"/>
                     </div>
-                    <div class="disTc xui-productInfo vt">
+                    <div class="disTc xui-productInfo vt pl10">
                         <dl class="disT w em95">
                             <dd class="disTc xui-ellipsis-2"><a href="./?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{product.id}}" style="color:#333;">{{ product.name }}</a></dd>
                             <dd class="disTc vt tr">
