--- a/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
@@ -79,7 +79,7 @@
 			<td>
 				{{if promotion.detail.limit_counts>0}}1人${ promotion.detail.limit_counts }张{{/if}}
 				{{if promotion.detail.limit_counts<=0}}无限{{/if}}<br/>
-				<p class="xui-greyColor">库存${promotion.detail.remained_count}</p>
+				<p class="xui-greyColor xa-remained-count">库存{{if promotion.status != '已结束'}}${promotion.detail.remained_count}{{else}}0{{/if}}</p>
 			</td>
 			<td>${ promotion.start_date} 至 ${ promotion.end_date}
 			</td>
@@ -89,7 +89,10 @@
 			</td>
 			<td>
 				<a href="../../coupons/get?id=${ promotion.detail.id }">码库</a>
-				{{if promotion.status != '已结束' }}
+				{{if promotion.status == '已失效' }}
+					&nbsp;&nbsp;<a href="javascript:void(0);" class="xa-delete">删除</a>
+				{{/if}}
+				{{if promotion.status != '已结束' && promotion.status != '已失效'}}
 				<span class="xa-notFinishInfo">&nbsp;-&nbsp;
 				<a class="xa-copyLinkBtn" href="javascript:void(0);" data-url="/termite/workbench/jqm/preview/?module=market_tool:coupon&model=coupon&action=get&workspace_id=market_tool:coupon&webapp_owner_id=${ promotion.detail.owner_id }&project_id=0&rule_id=${promotion.detail.id}">链接</a>&nbsp;-&nbsp;
 				<a href="../update?id=${ promotion.id }">编辑</a>&nbsp;-&nbsp;
@@ -98,7 +101,7 @@
 				<a href="javascript:void(0);" class="xa-finish">使失效</a></span>
 				{{/if}}
 				<!--a href="#">查看</a-->
-				<p class="xui-greyColor xa-finishInfo"{{if promotion.status != '已结束' }} style="display:none;"{{/if}}>已失效</p>
+				<p class="xui-greyColor xa-finishInfo"{{if promotion.status != '已结束' && promotion.status != '已失效'}} style="display:none;"{{/if}}>已失效</p>
 			</td>
 		</tr>
 		{{/each}}
