修复会员地城缩略
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15203 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -115,7 +115,7 @@
 
 		{{each(i, member) items}}
 		<tr data-id="${member.id}">
-			<td style="position:relative;">
+			<td style="position:relative;" title='{{html member.username}}'>
 
 				<div class="column_block xui-memberHeader pr">
 					{{if member.is_subscribed == 0}}
@@ -129,7 +129,7 @@
 				</div>
 				<div class="column_block">
 					<div>
-					<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;" title="{{html member.username}}">{{html member.username_truncated}}</a>
+					<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;" >{{html member.username_truncated}}</a>
 				</div>
 			</td>
 			<td>
