--- a/weapp/static_v2/js/view/weixin_new_keyword/template.html
+++ b/weapp/static_v2/js/view/weixin_new_keyword/template.html
@@ -6,7 +6,7 @@
             <span class="ml20 xa-radio"><input type="radio" class="xa-exact" name="radiobutton" value="0" checked ></span>
             <span class="ml10"> 精确匹配 </span>
             <span class="ml50 xa-radio"><input type="radio" class="xa-mistiness" name="radiobutton" value="1"  ></span>
-            <span class="ml10"> 部分匹配 </span> 
+            <span class="ml10"> 模糊匹配 </span> 
          </div>
          <div class="xui-i-left"><span class="xui-colorRed">*</span> 关键词：</div>
          <div class="xui-i-right"> 
