--- a/weapp/weixin2/templates/weixin/message/keyword_rules.html
+++ b/weapp/weixin2/templates/weixin/message/keyword_rules.html
@@ -119,7 +119,7 @@
 										</div>
 										<div class="xui-i-type fl pr xa-mode" >		
 											{{if item.type == "1"}}
-												<span class="xa-data-type" data-type=${item.type}>部分匹配</span>
+												<span class="xa-data-type" data-type=${item.type}>模糊匹配</span>
 											{{else}}
 												<span class="xa-data-type" data-type=${item.type}>精确匹配</span>
 											{{/if}}
