修改celery work数量,隐藏会员等级折扣配置
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15273 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/member/templates/member/editor/member_grades.html
+++ b/weapp/member/templates/member/editor/member_grades.html
@@ -36,7 +36,7 @@
 					<tr>
 						<th>会员等级</th>
 						<th>满足条件</th>
-						<th>优惠</th>
+						<!--th>优惠</th-->
 						<th>操作</th>
 					</tr>
 				</thead>
@@ -67,7 +67,7 @@
 
 
 						</td>
-						<td class="td-thrid">
+						<!--td class="td-thrid">
 
 							<div class="controls">
 								购物折扣：
@@ -78,7 +78,7 @@
 								</select>&nbsp;&nbsp;%
 
 							</div>
-						</td>
+						</td-->
 						<td class="td-fouth">{% if grade.is_default_grade %}
 							{% else %}
 							<a  href="javascript:void(0);" class="delete_tr">
@@ -92,15 +92,9 @@
 						<td class="w150">
 							<a href="javascript:void(0)" class='add_grades'>+添加会员等级</a>
 						</td>
-						<td>
-
-						</td>
-						<td>
-
-						</td>
-						<td>
-
-						</td>
+						<td></td>
+						<!--td></td-->
+						<td></td>
 					</tr>
 				</tbody>
 			</table>
