完成需求2852,修复BDD
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15275 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
@@ -89,8 +89,8 @@
 			</td>
 			<td>
 				<a href="../../coupons/get?id=${ promotion.detail.id }">码库</a>
-				{{if promotion.status == '已失效' }}
-					&nbsp;&nbsp;<a href="javascript:void(0);" class="xa-delete">删除</a>
+				{{if promotion.status == '已结束' }}
+					&nbsp;-&nbsp;<a href="javascript:void(0);" class="xa-delete">删除</a>
 				{{/if}}
 				{{if promotion.status != '已结束' && promotion.status != '已失效'}}
 				<span class="xa-notFinishInfo">&nbsp;-&nbsp;
