--- a/weapp/account/templates/account/browser_forbidden.html
+++ b/weapp/account/templates/account/browser_forbidden.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>demo</title>
+    <title>微众传媒</title>
     <style>
         html,body{
             margin: 0;
