--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -95,7 +95,10 @@
                 {% if not hide_non_member_cover %}
                     data-is-show-cover="true"
                 {% endif %}
-                data-url="{% if operation_settings %}{{ operation_settings.non_member_followurl }}{% endif %}">
+                data-url="{% if operation_settings %}{{ operation_settings.non_member_followurl }}{% endif %}"
+                data-id="{{request.webapp_owner_id}}"
+                >
+
             </div>
             {% block content-panel %}{% endblock %}
         {% endif %}
