--- a/weapp/market_tools/tools/shake/templates/shake/webapp/shake.html
+++ b/weapp/market_tools/tools/shake/templates/shake/webapp/shake.html
@@ -83,7 +83,8 @@
 		{% endif %}
 		 {% else %}
 		 <h2 class="tc">
-		 	先关注未来广场官方微信号才能参与抢红包哟~
+		 	先关注未来广场官方微信号<br/>
+		 	才能参与抢红包哟~
 		 </h2>
 		 {% endif %}
 		
