完成密码修改功能、修复订单列表重复操作，修复BDD
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15430 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/auth.css
+++ b/weapp/static_v2/css/auth.css
@@ -78,7 +78,7 @@
 * 角色管理页面&员工管理页面
 */
 .xui-accountRolesPage {
-    
+
 }
 .xui-roleInfoList,
 .xui-departmentInfoList {
@@ -148,9 +148,9 @@
     margin-top: -9px;
     right: 10px;
     color:#eaeef6;
-    -webkit-text-shadow:#666 1px 0 0,#666 0 1px 0,#666 -1px 0 0,#666 0 -1px 0;  
-    -moz-text-shadow:#666 1px 0 0,#666 0 1px 0,#666 -1px 0 0,#666 0 -1px 0;  
-    text-shadow:#666 1px 0 0,#666 0 1px 0,#666 -1px 0 0,#666 0 -1px 0; 
+    -webkit-text-shadow:#666 1px 0 0,#666 0 1px 0,#666 -1px 0 0,#666 0 -1px 0;
+    -moz-text-shadow:#666 1px 0 0,#666 0 1px 0,#666 -1px 0 0,#666 0 -1px 0;
+    text-shadow:#666 1px 0 0,#666 0 1px 0,#666 -1px 0 0,#666 0 -1px 0;
 }
 .xui-roleList .xui-i-input[placeholder],
 .xui-departmentList .xui-i-input[placeholder]{
@@ -169,7 +169,7 @@
 }
 /*.xui-roleList .xui-i-activeRole .xui-i-input,
 .xui-departmentList .xui-i-activeDepartment .xui-i-input{
-    width:171px;   
+    width:171px;
 }*/
 .xui-roleList .xui-i-activeRole .xui-i-config,
 .xui-departmentList .xui-i-activeDepartment .xui-i-config{
@@ -363,7 +363,7 @@
 }
 .xui-acountDetailPage .xui-role label{
    width: auto;
-   
+
    padding-right:30px;
 }
 .xui-acountDetailPage .xui-authority{
@@ -403,4 +403,19 @@
 }
 .xui-acountDetailPage .errorHint{
     margin-top: 10px;
+}
+
+.xui-updateSubAccountPasswordDialog label{
+    font-weight: normal;
+    width: 80px;
+    padding: 0px;
+}
+.xui-updateSubAccountPasswordDialog .password-input{
+    float: left;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.xui-updateSubAccountPasswordDialog input {
+    width: 110px;
 }
