--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -204,6 +204,7 @@ textarea{resize:none}
 .ml57{margin-left:57px !important;}
 .ml60{margin-left:60px !important;}
 .ml80{margin-left:80px !important;}
+.ml95{margin-left:95px !important;}
 .ml100{margin-left:100px !important;}
 .ml110{margin-left:110px !important;}
 .ml120{margin-left:120px !important;}
