--- a/weapp/auth/templates/auth/edit_account.html
+++ b/weapp/auth/templates/auth/edit_account.html
@@ -19,7 +19,7 @@
 		</div>
 		<input id="id" name="id" type="hidden" value="{{account_user.id}}" />
 		<input id="user_permission_ids" name="user_permission_ids" type="hidden" value="{{account_user.user_permission_ids_str}}" />
- 
+
 		<div class="form-group mt30">
 			<label class="control-label col-sm-2 " for="username">账户名称：</label>
 			<div class="col-sm-3">
@@ -27,7 +27,10 @@
 				<input type="text" class="form-control" id="username" name="username" placeholder="" value="" data-validate="require-string" data-maxlength="20" data-minlength="4"/>
 				<div class="errorHint"></div>
 				{% else %}
-				<p style="padding-top:7px;">{{account_user.username}}</p>
+				<p style="padding-top:7px;">
+					{{account_user.username}}
+					<a class="ml120 xa-updatePassword" href="javascript:void(0);">修改密码</a>
+				</p>
 				{% endif %}
 			</div>
 			{% if not account_user %}
@@ -77,7 +80,7 @@
 			</div>
 		</div>
 
-		
+
 	</fieldset>
 
 	<fieldset class="mt10">
@@ -88,8 +91,8 @@
 			<div class="col-sm-9">
 				{% for role in roles %}
 				<label class="checkbox-inline">
-					<input 
-						type="checkbox" 
+					<input
+						type="checkbox"
 						value="{{ role.id }}"
 						class="xa-role"
 						{% ifequal role.is_selected 1 %}checked="checked"{% endifequal %}
@@ -132,7 +135,7 @@
 
 
 {% block js %}
-<script type="text/javascript">	
+<script type="text/javascript">
 var userId = {% if account_user %}{{account_user.id}}{% else %}0{% endif %};
 function validatePassword($el) {
 	var $confirmPassword = $el;
@@ -205,6 +208,29 @@ function loadAccountPermissions(userId) {
 
 
 $(document).ready(function() {
+	$('.xa-updatePassword').click(function(){
+		W.dialog.showDialog('W.dialog.newmall.UpdateSubAccountPassword', {
+			success: function(data){
+				W.getApi().call({
+					app: 'auth',
+					method: 'post',
+					api: 'account_password/update',
+					args: {
+						id: userId,
+						password: data
+					},
+					success: function() {
+						console.log("success!!");
+						W.showHint('message', "修改密码成功！");
+					},
+					error: function() {
+						W.showHint('error', "修改密码失败！")
+					}
+				});
+			}
+		});
+	});
+
 	$('form').submit(function() {
 		if (!W.validate()) {
 			return false;
